# flud

./: package-lock.json  package.json
docs/superpowers/plans/: 2026-07-22-episode-list.md  2026-07-22-provider-database.md  2026-07-22-universal-modal.md
docs/superpowers/specs/: 2026-07-20-video-player-overlay-design.md  2026-07-22-episode-list-design.md  2026-07-22-provider-database-design.md  2026-07-22-universal-modal-design.md
migrations/: 002_fix_mask_defaults.sql  init.sql
pipeline/: PIPELINE.md  enrich.py  parse_sitemap.py
src/: package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/providers/123moviesfree/: config.toml
src-tauri/core/providers/fmovies/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  providers.rs
src/public/: overlay.html
src/src/: App.tsx  index.css  utils.ts
src/src/components/: AddPlaylistModal.tsx  AddVideoModal.tsx  ContentLandingModal.tsx  ContentRow.tsx  GenreCatalog.tsx  GenreGrid.tsx  HeroBanner.tsx  MovieModal.tsx  MovieRow.tsx  Navbar.tsx  ProviderList.tsx  SettingsModal.tsx  UniversalModal.tsx
