[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

uuid = { version = "1", features = ["v4"] }

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

dirs = "5"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
scraper = "0.20"

tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
